@@ -1,13 +1,16 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    kotlin("jvm") version "1.9.10" apply false
-    id("org.jmailen.kotlinter") version "3.16.0" apply false
-    id("com.github.ben-manes.versions") version "0.48.0"
+    kotlin("jvm") version "1.9.20" apply false
+    id("org.jmailen.kotlinter") version "4.0.0" apply false
+    id("com.github.ben-manes.versions") version "0.49.0"
+    id("io.github.gradle-nexus.publish-plugin") version "1.3.0"
+}
+allprojects {
+    group = "org.cs124"
+    version = "2023.11.0"
 }
 subprojects {
-    group = "com.github.cs124-illinois"
-    version = "2023.10.1"
     tasks.withType<KotlinCompile> {
         kotlinOptions {
             jvmTarget = JavaVersion.VERSION_17.toString()
@@ -19,12 +22,7 @@ subprojects {
     tasks.withType<Test> {
         enableAssertions = true
         useJUnitPlatform()
-        jvmArgs("-ea", "-Xmx1G", "-Xss256k", "--illegal-access=permit")
-    }
-}
-allprojects {
-    repositories {
-        mavenCentral()
+        jvmArgs("-ea", "-Xmx1G", "-Xss256k")
     }
 }
 tasks.dependencyUpdates {
